[gd_scene load_steps=5 format=3 uid="uid://dtj3u1aufd5wj"]

[ext_resource type="Texture2D" uid="uid://bs67ypxaa05ql" path="res://assets/textures/widgets/icons/medalGold.png" id="1_gy38p"]
[ext_resource type="Script" path="res://src/widgets/w_rank.gd" id="1_kitx2"]

[sub_resource type="LabelSettings" id="LabelSettings_g4msw"]
font_size = 22
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_xlgug"]
font_size = 12
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[node name="w_rank" type="MarginContainer"]
custom_minimum_size = Vector2(120, 55)
script = ExtResource("1_kitx2")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_right = 5

[node name="lab_empty" type="Label" parent="PanelContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "EMPTY"
label_settings = SubResource("LabelSettings_g4msw")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="tr_medal" type="TextureRect" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("1_gy38p")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="lab_name" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "name:XXX"
label_settings = SubResource("LabelSettings_xlgug")
vertical_alignment = 1

[node name="lab_score" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "score: 999"
label_settings = SubResource("LabelSettings_xlgug")
vertical_alignment = 1
